--- a/assets/package.json
+++ b/assets/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.6.4",
-    "angular-ui-router": "^1.0.3"
+    "angular-ui-router": "^1.0.3",
+    "ng-file-upload": "^12.2.13"
   }
 }
