--- a/assets/package.json
+++ b/assets/package.json
@@ -11,6 +11,6 @@
   "dependencies": {
     "angular": "^1.6.4",
     "angular-ui-router": "^1.0.3",
-    "ng-file-upload": "^12.2.13"
+    "ng-file-upload": "^12.2.13",
   }
 }
