--- a/assets/package.json
+++ b/assets/package.json
@@ -12,5 +12,6 @@
     "angular": "^1.6.4",
     "angular-ui-router": "^1.0.3",
     "ng-file-upload": "^12.2.13",
+    "ngclipboard": "^1.1.1"
   }
 }
